--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TypeScript Tutorial</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/public/style.css" />
   </head>
   <body>
     <h1>Finance Logger</h1>
@@ -37,6 +37,6 @@
       </form>
     </footer>
 
-    <script src="app.js" type="module"></script>
+    <script src="/public/app.js" type="module"></script>
   </body>
 </html>
